// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It matches the last accepted Snapshot 1`] = `
<Fragment>
  <Relay(DefaultLayout)
    allowedGroups={
      Array [
        "User",
      ]
    }
    session={
      Object {
        " $fragmentRefs": Object {
          "defaultLayout_session": true,
        },
        "ciipUserBySub": Object {
          "firstName": "max",
          "id": "abc",
          "lastName": "powers",
        },
      }
    }
    title="Submission Certification"
  >
    <Relay(ApplicationDetailsComponent)
      application={
        Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_application": true,
            "CertificationSignature_application": true,
          },
          "latestDraftRevision": Object {
            "certificationUrl": Object {
              " $fragmentRefs": Object {
                "ApplicationRecertificationContainer_certificationUrl": true,
              },
              "certificationSignature": "test",
              "hashMatches": true,
            },
          },
        }
      }
      liveValidate={false}
      query={
        Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_query": true,
          },
          "application": Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_application": true,
              "CertificationSignature_application": true,
            },
            "latestDraftRevision": Object {
              "certificationUrl": Object {
                " $fragmentRefs": Object {
                  "ApplicationRecertificationContainer_certificationUrl": true,
                },
                "certificationSignature": "test",
                "hashMatches": true,
              },
            },
          },
          "session": Object {
            " $fragmentRefs": Object {
              "defaultLayout_session": true,
            },
            "ciipUserBySub": Object {
              "firstName": "max",
              "id": "abc",
              "lastName": "powers",
            },
          },
        }
      }
      review={false}
    />
    <Relay(CertificationSignatureComponent)
      application={
        Object {
          " $fragmentRefs": Object {
            "ApplicationDetailsContainer_application": true,
            "CertificationSignature_application": true,
          },
          "latestDraftRevision": Object {
            "certificationUrl": Object {
              " $fragmentRefs": Object {
                "ApplicationRecertificationContainer_certificationUrl": true,
              },
              "certificationSignature": "test",
              "hashMatches": true,
            },
          },
        }
      }
    />
  </Relay(DefaultLayout)>
  <JSXStyle
    id="86400541"
  >
    .signatureCanvas{border:1px solid #bbb;padding:30px;width:80%;background:#eee;border-radius:6px;margin-bottom:60px;}#disclaimer-text{max-height:19.2em;background:#eee;overflow-y:scroll;}.show-scrollbar::-webkit-scrollbar{-webkit-appearance:none;width:8px;}.show-scrollbar::-webkit-scrollbar-thumb{border-radius:4px;background-color:rgba(0,0,0,0.5);box-shadow:0 0 1px rgba(255,255,255,0.5);}
  </JSXStyle>
</Fragment>
`;

exports[`It renders ApplicationRecertificationContainer if hashMatches is false 1`] = `
<Fragment>
  <Relay(DefaultLayout)
    allowedGroups={
      Array [
        "User",
      ]
    }
    session={
      Object {
        " $fragmentRefs": Object {
          "defaultLayout_session": true,
        },
        "ciipUserBySub": Object {
          "firstName": "max",
          "id": "abc",
          "lastName": "powers",
        },
      }
    }
    title="Submission Certification"
  >
    <Relay(ApplicationRecertification)
      certificationUrl={
        Object {
          " $fragmentRefs": Object {
            "ApplicationRecertificationContainer_certificationUrl": true,
          },
          "certificationSignature": "test",
          "hashMatches": false,
        }
      }
    />
  </Relay(DefaultLayout)>
  <JSXStyle
    id="86400541"
  >
    .signatureCanvas{border:1px solid #bbb;padding:30px;width:80%;background:#eee;border-radius:6px;margin-bottom:60px;}#disclaimer-text{max-height:19.2em;background:#eee;overflow-y:scroll;}.show-scrollbar::-webkit-scrollbar{-webkit-appearance:none;width:8px;}.show-scrollbar::-webkit-scrollbar-thumb{border-radius:4px;background-color:rgba(0,0,0,0.5);box-shadow:0 0 1px rgba(255,255,255,0.5);}
  </JSXStyle>
</Fragment>
`;
